# easy-test-mvp

./: .env.example  .gitignore  Makefile  README.md  docker-compose.ci.yml  docker-compose.dev.yml  docker-compose.prod.yml  nginx.conf.example  start-prod.sh
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  simple-ci.yml
back/: .dockerignore  Dockerfile.ci  Dockerfile.dev  Dockerfile.prod  README.md  alembic.ini  pyproject.toml
back/alembic/: env.py
back/alembic/versions/: 46cc0c8ee04f_add_initial_project_tables_2.py  892994604c99_add_initial_project_tables.py  eaaf6b0273bc_initial_empty_migration.py
back/app/: database.py  main.py  models.py  schemas.py
back/app/core/: config.py
back/tests/: README.md  conftest.py  test_api.py  test_integration.py  test_main.py  test_models.py  test_schemas.py
config/: database.py  env.example
config/env/: README.md  __init__.py  example.py  validator.py
docs/: CI-SETUP.md  README.md  ci-cd.md  deployment2.md
front/: .dockerignore  .env.example  Dockerfile  Dockerfile.ci  package-lock.json  package.json  vite.config.js
front/src/: App.css  App.jsx  config.js
front/src/components/: HomePage.jsx  TestPage.jsx
front/src/test/: App.test.jsx  setup.js
front/src/test/mocks/: handlers.js
nginx/: nginx.conf
postgres_config/: pg_hba.conf
scripts/: deploy.sh  generate-env-example.py  migrate.sh  run-tests-local.sh  test-ci.sh
