[tool.poetry]
name = "easy-test-backend"
version = "0.1.0"
description = ""
authors = ["Cline <cline@example.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = ">=3.13"
fastapi = "*"
uvicorn = {extras = ["standard"], version = "*"}
pydantic = "*"
sqlalchemy = "*"
psycopg2-binary = "*"
python-dotenv = "^1.1.1"
pydantic-settings = "^2.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
